changed github for fiverr

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <ul>
                     <li><a title="Twitter" href="{{ site.linkedin }}" target="_blank">Linkedin |</a>
                     <a title="Twitter" href="{{ site.twitter }}" target="_blank">Twitter |</a>
-                    <a title="Github" href="{{ site.github }}" target="_blank">Github</a></li>
+                    <a title="Fiverr" href="{{ site.fiverr }}" target="_blank">Fiverr</a></li>
                 </ul>
             </div>
 		</section>
